<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:alpha="0.8"
    android:background="@drawable/syndgood">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:id="@+id/logo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:padding="20dp" >

            <ImageView
                android:layout_width="250dp"
                android:layout_height="197dp"
                android:layout_gravity="center"
                android:background="@drawable/logo" />
        </LinearLayout>



        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Personal Details"
                android:textColor="@color/textColor"
                android:paddingBottom="20dp"/>


            <EditText
                android:id="@+id/et_username_reg"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:hint="Enter cell number"
                android:singleLine="true"
                android:textColor="@color/textColor"
                android:textStyle="bold"
                android:inputType="phone" />
            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:hint="Enter password"
                android:singleLine="true"
                android:textColor="@color/textColor"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/et_id_reg"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="@string/et_id_reg"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@color/textColor"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/et_name_reg"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="@string/et_name_reg"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@color/textColor"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/et_surname_reg"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="@string/et_sname_reg"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@color/textColor"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/et_email_reg"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="@string/et_email_reg"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/textColor"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/et_mobile_number_alt_reg"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="@string/et_mobile_number_alt_reg"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@color/textColor"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btn_next_reg"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="#2299de"
                android:text="Next"
                android:textColor="#fff"
                android:textStyle="bold" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="#ffff" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tv_cancel_reg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".49"
                    android:gravity="center"
                    android:textColor="@color/textColor"
                    android:text="Cancel Registration"
                    android:textStyle="bold" />




            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>