<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:alpha="0.9"
    android:background="@drawable/syndgood">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/logo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="197dp"
                android:layout_gravity="center"
                android:background="@drawable/logo" />
        </LinearLayout>



        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_store_name"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:hint="@string/et_store_name"
                android:singleLine="true"
                android:textColor="@color/textColor"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/et_id"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:hint="@string/et_id_login"
                android:singleLine="true"
                android:textColor="@color/textColor"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/et_otp"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="@string/et_otp_login"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/textColor"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="#2299de"
                android:text="Login"
                android:textColor="@color/textColor"
                android:textStyle="bold" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="#ffff" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tv_register"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".49"
                    android:gravity="center"
                    android:textColor="@color/textColor"
                    android:text="Create an Account"
                    android:textStyle="bold" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="fill_parent"
                    android:layout_margin="10dp"
                    android:background="#ffff" />

                <TextView
                    android:id="@+id/tv_get_otp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".49"
                    android:gravity="center"
                    android:text="Get OTP"
                    android:textColor="@color/textColor"
                    android:textStyle="bold" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="fill_parent"
                    android:layout_margin="10dp"
                    android:background="#ffff" />

                <TextView
                    android:id="@+id/tv_add_no"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".49"
                    android:gravity="center"
                    android:text="Add Number"
                    android:textColor="@color/textColor"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
